src/test/deca/context/valid/with_object/implicit_cast_return.deca
class A{
    float f(){
        return 1;
    }
}