src/test/deca/context/invalid/oracle/method_with_void_param.deca
class A{
    int f(void x){
        return 1;
    }
}